# Study-Computer-Graphics-SS2016

./: MyGLWidget.h  ProjectAR.pro  README.md  ardata.h  calibrator.cpp  default130.frag  default330.frag  default330.vert  detector.cpp  detector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markergenerator.cpp  modelloader.h  myglwidget.cpp  textures.qrc
P1/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
P2/: MyGLWidget.cpp  MyGLWidget.h  P2.pro  mainwindow.cpp  mainwindow.ui
P3/: MyGLWidget.cpp  MyGLWidget.h  P3.pro  default130.frag  default130.vert  default330.frag  default330.vert  enums.h  mainwindow.cpp  mainwindow.h  planet.cpp  planet.h  shader.qrc  textures.qrc
P4/: MyGLWidget.cpp  MyGLWidget.h  P4.pro  Planeten.xlsx  default130.frag  default130.vert  enums.h  mainwindow.cpp  mainwindow.ui  planet.cpp  planet.h  shader.qrc  sonne.cpp  sonne.h  sun130.frag  sun130.vert  textures.qrc
P5/: README.md  ardata.cpp  ardata.h  calibrator.h  default130.vert  default330.frag  detector.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markergenerator.h  modelloader.cpp  shader.qrc  textures.qrc
